src/snapshots/glass__parser__tests__!done.snap
---
source: src/parser.rs
expression: parse_expr_str(input)
---
Spanned {
    node: UnaryOp {
        op: Not,
        operand: Spanned {
            node: Var(
                "done",
            ),
            span: Span {
                start: 1,
                end: 5,
            },
        },
    },
    span: Span {
        start: 0,
        end: 5,
    },
}
