src/snapshots/glass__parser__tests__"hello".snap
---
source: src/parser.rs
expression: parse_expr_str(input)
---
Spanned {
    node: String(
        "hello",
    ),
    span: Span {
        start: 0,
        end: 7,
    },
}
