src/snapshots/glass__parser__tests__'hfoo'.snap
---
source: src/parser.rs
expression: parse_expr_str(input)
---
Spanned {
    node: Rawcode(
        "hfoo",
    ),
    span: Span {
        start: 0,
        end: 6,
    },
}
