src/snapshots/glass__parser__tests__-x.snap
---
source: src/parser.rs
expression: parse_expr_str(input)
---
Spanned {
    node: UnaryOp {
        op: Negate,
        operand: Spanned {
            node: Var(
                "x",
            ),
            span: Span {
                start: 1,
                end: 2,
            },
        },
    },
    span: Span {
        start: 0,
        end: 2,
    },
}
