src/snapshots/glass__parser__tests__3.14.snap
---
source: src/parser.rs
expression: parse_expr_str(input)
---
Spanned {
    node: Float(
        3.14,
    ),
    span: Span {
        start: 0,
        end: 4,
    },
}
